# neural-networks

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  visualize.py
src/: activation_function.cpp  activation_function.h  builder.cpp  builder.h  data_loader.cpp  data_loader.h  except.cpp  except.h  helpers.h  layer.cpp  layer.h  linalg.h  linear.cpp  linear.h  loss_function.cpp  loss_function.h  main.cpp  net.cpp  net.h  optimizer.cpp  optimizer.h  utils.cpp  utils.h
tests/: test_runner.cpp  test_runner.h  tests.cpp  tests.h
